# InlineAtStaticTime

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: CLANG-MacOS-XCode.yml  CLANG-MacOS.yml  CLANG-Ubuntu.yml  GCC-Ubuntu.yml  MSVC-Windows.yml
CPU-Arch/: CMakeLists.txt  arm_neon.hpp  arm_sve.hpp  avx.hpp  avx_2.hpp  avx_512.hpp  common.hpp  config.hpp  cpu_arch.cpp  cpu_arch.hpp  cpu_traits.hpp  detect_isa.hpp  fallback.hpp
CPU-Arch/arm/: CMakeLists.txt  arm.cpp  arm_neon.hpp
CPU-Arch/avx_2/: CMakeLists.txt  avx_2.cpp
CPU-Arch/avx_512/: CMakeLists.txt  avx_512.cpp
